--- a/history.txt
+++ b/history.txt
@@ -13,3 +13,32 @@
    10  chmod 700 runtests.sh 
    11  ./runtests.sh 
    12  history >> history.txt
+    1  git config user.email "jose.s.maciel@outlook.com" && git config user.name "maciel-j" && git config --list && git clone https://github.com/maciel-j/devops-capstone-project.git && cd devops-capstone-project && bash ./bin/setup.sh && history >> history.txt && exit
+    2  git clone https://github.com/maciel-j/devops-capstone-project.git && cd devops-capstone-project && git config user.email "jose.s.maciel@outlook.com" && git config user.name "maciel-j" && git config --list && bash ./bin/setup.sh && history >> history.txt && exit
+    3  export GITHUB_ACCOUNT=maciel-j
+    4  which python
+    5  python --version
+    6  git cob dev-setup
+    7  git checkout -b dev-setup
+    8  cd devops-capstone-project/
+    9  git checkout -b dev-setup
+   10  chmod 700 runtests.sh 
+   11  ./runtests.sh 
+   12  history >> history.txt
+   13  git commit -am "added nose arguments"
+   14  git push --set-upstream origin dev-setup
+   15  git add .
+   16  git commit -m "added nose arguments 20241118"
+   17  git push origin dev-setup
+   18  git checkout main
+   19  git pull
+   20  git branch -d dev-setup
+   21  git checkout -b feature-read
+   22  nosetests -s
+   23  ./runtests.sh 
+   24  gir branch
+   25  git branch
+   26  git add .
+   27  git commit -m "add read feature"
+   28  git push --set-upstream origin feature-read
+   29  history >> history.txt
